SERVER-62682 Add _rebuildCV.notify_all() after all mutations to _state

(cherry picked from commit fd6fb9e6a49955828c12355e33edf8b328e44a43)